fixed some unit tests
